<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>ch.ethz.idsc</groupId>
	<artifactId>retina</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>

	<name>retina</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<github.global.server>github</github.global.server>
		<lwjgl.version>3.1.6</lwjgl.version>
	</properties>

	<profiles>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>Windows</family>
				</os>
			</activation>
			<properties>
				<platform>windows</platform>
			</properties>
		</profile>
		<profile>
			<id>windows-x86</id>
			<activation>
				<os>
					<family>Windows</family>
					<arch>x86</arch>
				</os>
			</activation>
		</profile>
		<profile>
			<id>linux</id>
			<activation>
				<os>
					<family>Linux</family>
				</os>
			</activation>
			<properties>
				<platform>linux</platform>
			</properties>
		</profile>
		<profile>
			<id>linux-x86</id>
			<activation>
				<os>
					<family>Linux</family>
					<arch>x86</arch>
				</os>
			</activation>
		</profile>
		<profile>
			<id>linux-amd64</id>
			<activation>
				<os>
					<family>Linux</family>
					<arch>amd64</arch>
				</os>
			</activation>
		</profile>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>Mac</family>
				</os>
			</activation>
			<properties>
				<platform>macos</platform>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>ch.ethz.idsc</groupId>
			<artifactId>tensor</artifactId>
			<version>0.7.2</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.idsc</groupId>
			<artifactId>ephemeral</artifactId>
			<version>0.2.2</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.idsc</groupId>
			<artifactId>lcm-java</artifactId>
			<version>0.1.0</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.idsc</groupId>
			<artifactId>owl</artifactId>
			<version>0.3.9</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.idsc</groupId>
			<artifactId>subare</artifactId>
			<version>0.2.8</version>
		</dependency>

		<dependency>
			<groupId>com.fazecast</groupId>
			<artifactId>jSerialComm</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>de.lmu.ifi.dbs.elki</groupId>
			<artifactId>elki-bundle</artifactId>
			<version>0.7.1</version>
		</dependency>
		<dependency>
			<groupId>io.humble</groupId>
			<artifactId>humble-video-all</artifactId>
			<version>0.2.1</version>
		</dependency>

		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
		</dependency>

		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-glfw</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		<dependency>
			<groupId>org.lwjgl</groupId>
			<artifactId>lwjgl-opengl</artifactId>
			<version>${lwjgl.version}</version>
			<classifier>natives-${platform}</classifier>
		</dependency>
		
		<dependency>
			<groupId>org.bytedeco</groupId>
			<artifactId>javacv-platform</artifactId>
			<version>1.4.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>tensor-mvn-repo</id>
			<url>https://raw.github.com/idsc-frazzoli/tensor/mvn-repo/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>subare-mvn-repo</id>
			<url>https://raw.github.com/idsc-frazzoli/subare/mvn-repo/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>ephemeral-mvn-repo</id>
			<url>https://raw.github.com/idsc-frazzoli/ephemeral/mvn-repo/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>lcm-java-mvn-repo</id>
			<url>https://raw.github.com/idsc-frazzoli/lcm-java/mvn-repo/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>owl-mvn-repo</id>
			<url>https://raw.github.com/idsc-frazzoli/owl/mvn-repo/</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>internal.repo</id>
			<name>Temporary Staging Repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.11</version>
				<configuration>
					<message>Maven artifacts for ${project.version}</message>
					<noJekyll>true</noJekyll>
					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
					<branch>refs/heads/mvn-repo</branch>
					<merge>true</merge>
					<includes>
						<include>**/*</include>
					</includes>
					<repositoryName>retina</repositoryName>
					<repositoryOwner>idsc-frazzoli</repositoryOwner>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>deploy</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

</project>
